--- a/FASES/FASE 2/PR/Master_ESport/nbproject/private/private.properties
+++ b/FASES/FASE 2/PR/Master_ESport/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Pistach\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\1GDAW03\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
