--- a/FASES/FASE 2/PR/Master_ESport/nbproject/private/private.properties
+++ b/FASES/FASE 2/PR/Master_ESport/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\1GDAW03\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar.jar=E:\\reto\\GITHUB\\RAIZ\\FASES\\FASE 2\\PR\\Master_ESport\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\1gdaw09\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
