--- a/FASES/FASE 2/PR/Master_ESport/nbproject/project.properties
+++ b/FASES/FASE 2/PR/Master_ESport/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Master_ESport.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.ojdbc6.jar=ojdbc6.jar
+file.reference.jcalendar.jar=C:\\Users\\1gdaw09\\Downloads\\jcalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.jcalendar.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
